--- a/Stylesheets/Default.css
+++ b/Stylesheets/Default.css
@@ -8,7 +8,7 @@ header{
     font-family: 'Oswald', sans-serif;
     width: 100%;
     box-shadow: 5px 3px 10px 1px #999999;
-    background: linear-gradient(rgba(200,200,200,1), rgba(255,255,255,1),rgba(200,200,200,1));
+    background: #fafafa;
     margin-bottom: 40px;
     border-bottom-right-radius: 5px;
     border-bottom-left-radius: 5px;
@@ -21,7 +21,7 @@ a:hover{
     color: #576675
 }
 body{
-    background: linear-gradient(rgba(153, 204, 255,0.15), rgba(255,255,255,0.1),rgba(153, 204, 255, 0.15), rgba(255,255,255,0.1),rgba(153, 204, 255, 0.15));
+    background-color: #f2f2f2;
     background-size: 100%;
     background-repeat: repeat-y;
 }
@@ -30,7 +30,7 @@ article{
     margin: auto;
     width: 80%;
     box-shadow: 5px 3px 10px 1px #999999;
-    background: linear-gradient(rgba(200,200,200,1), rgba(255,255,255,1),rgba(200,200,200,1));
+    background: #fafafa;
     margin-bottom: 40px;
     padding: 30px;
     border-radius: 5px;
@@ -49,7 +49,7 @@ border-width: 4px 0px 4px 0px;
 border-image: url(../images/divisor.png) 51 53 52 51 round repeat;
 }
 footer{
-    background:linear-gradient(rgba(200,200,200,1), rgba(255,255,255,1),rgba(200,200,200,1));
+    background: #fafafa;
     position: fixed;
     top: 96%;
     left: 0%;
